--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -17,7 +17,7 @@
   &:active {
     background-color: #003f7f;
   }
-   &:disabled {
+   &.disabled {
     cursor: not-allowed;
     opacity: 0.6;
   }
